# ChronosphereConfigs

./: Dockerfile  README.md  pyproject.toml
builder/: builder.py  chronocollector-daemonset-base.yaml  chronocollector-deployment-base.yaml
cadvisor/: README.md
cadvisor/manifests/: cadvisor-chronocollector-daemonset.yaml
kube-state-metrics/: README.md
kube-state-metrics/manifests/: ksm-chronocollector-deployment.yaml  ksm-servicemonitor.yaml
